--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     </string-array>
 
     <string name="masukkan_suhu">Masukkan Suhu</string>
-    <string name="aplikasi_konversi_suhu">Aplikasi Konversi Suhu</string>">
+    <string name="aplikasi_konversi_suhu">Aplikasi Konversi Suhu</string>
+    <string name="kalkulasi">Kalkulasi</string>
+    <string name="hasil">Hasil</string>">
 </resources>
